feat: Add socket subscription on user change (#265)
* feat: Add socket subscription on user change

* fix: Fix for case when use leaves, updates and joins back
